# iam_generator

./: LICENSE  README.md  pyproject.toml
src/: html.py  model.py
templates/: form.html
