[tool.poetry]
name = "iam_generator"
version = "0.1.0"
description = ""
authors = ["David Michael <1.david.michael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
Jinja2 = "^3.0.3"
python-multipart = "^0.0.5"
policy-sentry = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
